# Majeed

./: .gitignore  AUTHORS  README.md  meson.build
data/: gschema.xml
meson/: post_install.py
src/: Application.vala  HeaderBar.vala  Main.vala  Quran  TextView.vala  Window.vala  meson.build
src/Dialogs/: About.vala  Keyboard.vala  Preferences.vala
src/Layout/: HeaderBar.vala  ListBox.vala  Pane.vala  SouraList.vala  TextView.vala  Window.vala
src/Widgets/: HeaderBar.vala  TextView.vala  Window.vala
