executable(
		meson.project_name(),
		'Main.vala',
		
		'Application.vala',
		'Dialogs/About.vala',
                'Dialogs/Keyboard.vala',
                'Dialogs/Preferences.vala',

		'Layout/Window.vala',
		'Layout/HeaderBar.vala',
		'Layout/TextView.vala',
		'Layout/Pane.vala',

		dependencies: [
			dependency('gtk+-3.0'),
			dependency('gio-2.0'),
			dependency('goocanvas-2.0')
			],
		install: true
)
